エラーハンドリング追加

--- a/tasks.json
+++ b/tasks.json
@@ -2,5 +2,9 @@
     {
         "name": "あいうえおかきくけこさしすせそたち",
         "done": false
+    },
+    {
+        "name": "プログラミング",
+        "done": false
     }
 ]
