ログの追加

--- a/tasks.json
+++ b/tasks.json
@@ -1,10 +1,10 @@
 [
     {
-        "name": "あいうえおかきくけこさしすせそたち",
+        "name": "プログラミング",
         "done": false
     },
     {
-        "name": "プログラミング",
+        "name": "アプリ開発",
         "done": false
     }
 ]
